# NSDI2025-PreAcher

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: DuoHash.hpp  DuoHash_crypto.hpp  PreAcher.hpp  PreAcher_crypto.hpp  minhash.hpp
src/: DuoHash.cpp  DuoHash_crypto.cpp  PreAcher.cpp  PreAcher_crypto.cpp
test/: CMakeLists.txt  cdn.cpp  fileserver.h  hash-cdn.cpp  hash-server.cpp  server.cpp  single_server.pem  test_util.h
test/share/static/: duohash.html  hash.html  index.html  preacher.html
test/share/static/js/: hash_client.js  kmerhash.js  single_client.js  util.js
